renamed the transplant_llm folder for consistency across projects; got the appropriate fields exposed through the module init file for use in other projects

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,4 +38,4 @@ dev = [
 
 [tool.flit.sdist]
 # change this to the name of the study folder inside of the module directory
-include = ["transplant_llm/"]
+include = ["kidney_transplant_llm/"]
